# fino2py

./: .gitignore  .readthedocs.yaml  Documentation Update Process.qmd  Notes_document  README.md  README.rst  Timesheets (1)-2.csv  Timesheets (1)-2.xlsx  __init__.py  doc header.rst  output.txt  pyproject.toml  requirements.txt
docs/: citation.rst  conf.py  fino2py.cleaning.rst  fino2py.example_project.rst  fino2py.ingesting.rst  fino2py.reshaping.rst  fino2py.rst  fino2py.times.rst  index.rst  mkdocs.yml  modules.rst  requirements.txt
docs/docs/: index.md
fin2py/: mkdocs.yml
fin2py/src/: __init__.py  convert_time.py  create_chunk.py  dependencies.py  import_demographics.py  import_protocol_averages.py  read_finomter_intervals.py  read_raw_finometer_data.py
fin2py/tests/: current.ipynb  scratch.ipynb
fino2py/: __init__.py  dependencies.py  mkdocs.yml
fino2py/cleaning/: merge_split_data.py
fino2py/docs/: about.md  index.md  times.md
fino2py/ingesting/: read_nova_demographics.py  read_raw_demographics.py  read_raw_finometer_data.py  read_raw_nova_data.py
fino2py/reshaping/: __init__.py  append_cardio_data.py  create_chunk.py  generate_protocol_averages.py  import_protocol_averages.py  minute_by_minute.py  minute_by_minute_from_folder.py  nova_concat.py  nova_minute_by_minute.py
fino2py/site/: 404.html  index.html
fino2py/src/: __init__.py  create_chunk.py  dependencies.py  import_protocol_averages.py  import_protocol_times.py
fino2py/tests/: current.html  (+3 more)
fino2py/tests-jupyter/: test_env.ipynb
src/: dependencies.py  import_finometer.ipynb  scratch.ipynb
tests/: current.qmd
(+58 files in other folders)
