[project]
authors = [
    {name = "Kev O'Malley"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "pandas<3.0.0,>=2.0.1",
]
name = "fino2py"
version = "0.1.0.7"
description = "A package to help researchers and clinicians work with data produced by the Finapress Finometer and Nova devices"
readme = "README.md"

[dependency-groups]
dev = [
    "sphinx==6.2.1",
    "sphinx-rtd-theme<2.0.0,>=1.2.1",
    "certifi<2025.0,>=2024.07",
]
